Fixed image of Movie thumb that was stretching in mobile view. Added _redirects file

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,18 +11,12 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 100%;
 }
 
 .movie-list-container a {
 	display: flex;
 	text-decoration: none;
 	color: white;
-	width: 100%;
-}
-
-.movie-thumb-wrapper {
-	width: 100%;
 }
 
 .movie-thumb-link {
@@ -32,31 +26,25 @@ body {
 
 .thumb-img {
 	width: 100%;
-	/* 	position: relative;  I dont know what
-  this one was doing in here*/
+	height: auto;
 }
 
 .movie-thumb-text {
-	/*styling for keeping text at the bottom of movie thumb*/
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
-	/* styling for the hover effect on movie thumb*/
 	position: absolute;
 	bottom: 0;
 	top: 0;
 	right: 0;
 	left: 0;
 	padding: 25px;
-	/*text needs to be hidden and needs black background, no opacity 
-  and transition set here*/
 	visibility: hidden;
 	background: rgba(0, 0, 0, 0.8);
 	opacity: 0;
 	transition: opacity 0.3s ease-in-out;
 }
 
-/*hovering on link will affect the movie thumb text*/
 .movie-thumb-link:hover .movie-thumb-text {
 	opacity: 1;
 	visibility: visible;
@@ -113,10 +101,6 @@ body {
 	border: 2px solid white;
 	margin: 25px 0;
 }
-
-/*creates a dark background behind the text
-and the opacity should be set in the color so it
-doesn't applies to the text too*/
 
 .movie-details-text {
 	background: rgba(0, 0, 0, 0.6);
